--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -1,3 +1,4 @@
+
 <ng-container *ngIf="(newCenterState$ | async) as state" [ngSwitch]="state.dataState">
   <ng-container *ngSwitchCase="DataState.LOADED">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
@@ -24,12 +25,12 @@
                   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
-                <form #newCenterForm="ngForm" (ngSubmit)="createCenter()" class="mb-4">
+                <form [formGroup]="newCenterForm" (ngSubmit)="createCenter()" class="mb-4">
                   <div class="row">
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" ngModel name="name" class="form-control" id="name" placeholder="Ex. MyCenter" required>
+                        <input type="text" formControlName="name" class="form-control" id="name" placeholder="Ex. MyCenter" required>
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
@@ -39,7 +40,7 @@
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
-                      <div [formGroup]="countySelectForm" class="form-group">
+                      <div class="form-group">
                         <label>County</label>
                         <input type="text" formControlName="county" class="form-control" [typeahead]="counties"
                                [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select County"
@@ -47,7 +48,7 @@
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
-                      <div [formGroup]="citySelectForm" class="form-group">
+                      <div class="form-group">
                         <label>City</label>
                         <input type="text" formControlName="city" class="form-control" [typeahead]="cities"
                                [minLength]="0" [typeaheadWaitMs]="10" placeholder="Select City"
@@ -56,24 +57,31 @@
                     </div>
                     <div class="col-md-6 mb-3">
                       <label for="address">Address</label>
-                      <input type="text" ngModel name="address" class="form-control" id="address" placeholder="Ex. Eco 123" required>
+                      <input type="text" formControlName="address" class="form-control" id="address" placeholder="Ex. Eco 123" required>
                     </div>
 
-                    <div [formGroup]="materialsSelectForm" class="col-md-6 mb-3">
+                    <div class="col-md-6 mb-3">
                       <label>Accepted Materials</label>
                       <input formControlName="materials" [typeahead]="availableMaterials" [minLength]="0"
                              [typeaheadWaitMs]="10" placeholder="Accepted Materials" class="form-control"
                              (typeaheadOnSelect)="onSelectMaterials($event)" />
                     </div>
 
-                    <div class="col-md-6 mb-3">
-                      <label>Opening Time</label>
-                      <ngb-timepicker [(ngModel)]="openingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
-                    </div>
+                    <ng-container *ngIf="!newCenterForm.get('alwaysOpen').value">
+                      <div class="col-md-6 mb-3">
+                        <label>Opening Time</label>
+                        <ngb-timepicker formControlName="openingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label>Closing Time</label>
+                        <ngb-timepicker formControlName="closingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
+                      </div>
+                    </ng-container>
 
                     <div class="col-md-6 mb-3">
-                      <label>Closing Time</label>
-                      <ngb-timepicker [(ngModel)]="closingTime" [seconds]="false" [spinners]="false"></ngb-timepicker>
+                      <label>Always Open</label>
+                      <input type="checkbox" formControlName="alwaysOpen">
                     </div>
 
 
@@ -91,12 +99,12 @@
 
 
 
-<!--                    <div class="col-md-12 mb-3">-->
-<!--                      <div class="form-group">-->
-<!--                        <label for="imageUrl">Image URL</label>-->
-<!--                        <input type="text" ngModel name="imageUrl" class="form-control" id="imageUrl">-->
-<!--                      </div>-->
-<!--                    </div>-->
+                    <!--                    <div class="col-md-12 mb-3">-->
+                    <!--                      <div class="form-group">-->
+                    <!--                        <label for="imageUrl">Image URL</label>-->
+                    <!--                        <input type="text" ngModel name="imageUrl" class="form-control" id="imageUrl">-->
+                    <!--                      </div>-->
+                    <!--                    </div>-->
 
                   </div>
 
