--- a/src/app/component/center-new/center-new.component.html
+++ b/src/app/component/center-new/center-new.component.html
@@ -36,7 +36,7 @@
                     <div class="col-md-6 mb-3">
                       <div class="form-group">
                         <label for="contact">Contact</label>
-                        <input type="text" ngModel name="email" class="form-control" id="contact" placeholder="Ex. 0787767443" required>
+                        <input  type="text"  formControlName="contact" name="contact" class="form-control" id="contact" placeholder="Ex. 0787767443" required>
                       </div>
                     </div>
                     <div class="col-md-6 mb-3">
