--- a/src/app/component/center-details/center-details.component.html
+++ b/src/app/component/center-details/center-details.component.html
@@ -15,58 +15,60 @@
             <div class="card border rounded-3 mb-3">
               <div class="card-body">
                 <div class="d-flex align-items-start">
-                  <img [src]="state?.appData?.data?.center?.imageUrl" style="position: relative" class="rounded-circle avatar-lg img-thumbnail" alt="profile-image">
+                  <img src="state?.appData?.data?.center?.imageUrl" style="position: relative" class="rounded-circle avatar-lg img-thumbnail" alt="">
                   <div class="w-25 ms-2">
                     <h4 class="my-0">{{ state?.appData?.data?.center?.name }}</h4>
-                    <p class="text-muted" style="font-size: 13px;"> {{ state?.appData?.data?.center?.contact }} Contact </p>
-                    <!--                    <span class="badge" style="position: absolute;bottom:60px;left: 113px; top: 70px;font-size: 11px; height: 18px;"-->
-                    <!--                          [ngClass]="[-->
-                    <!--                                    // state?.appData?.data?.center.alwaysOpen === 'ACTIVE' ? ' bg-success' : '',-->
-                    <!--                                    state?.appData?.data?.customer.status === 'PENDING' ? ' bg-primary' : '',-->
-                    <!--                                    state?.appData?.data?.customer.status === 'BANNED' ? ' bg-danger' : '',-->
-                    <!--                                    state?.appData?.data?.customer.status === 'INACTIVE' ? ' bg-info' : ''-->
-                    <!--                                    ]" >-->
-                    <!--                                 {{ state?.appData?.data?.customer.status }}-->
-                    <!--                         </span>-->
+                    <p class="text-muted" style="font-size: 18px;"> {{ state?.appData?.data?.center?.contact }}</p>
+                    <div class="accepted-materials">
+                      <ng-container *ngFor="let material of state?.appData?.data?.center | acceptedMaterials">
+                        <span class="badge mb-0" [ngClass]="material.badgeClass">{{ material.name }}</span>
+                      </ng-container>
+                    </div>
+
+
                   </div>
                 </div>
               </div>
             </div>
 
             <!-- Stats Card -->
-            <div class="card border rounded-3 mt-3">
+            <div class="card border rounded-3 mt-3 fade-bottom">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between mb-3">
                   <div>
                     <h5 class="card-title mb-0">Center Stats</h5>
                   </div>
-                  <div>
-                    <i class="bi bi-bar-chart h2 text-primary"></i>
+                  <div class="h4">
+                    <i class="fa-solid fa-chart-line"></i>
                   </div>
                 </div>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span class="me-2 h4">245</span>
+                    <span class="me-2 h5">245</span>
                     <span class="badge bg-secondary text-dark">Recyclers</span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span class="me-2 h4">1,124</span>
+                    <span class="me-2 h5">1,124</span>
                     <span class="badge bg-secondary text-dark">Activities</span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span class="me-2 h4">56,789 kg</span>
+                    <span class="me-2 h5">56,789 kg</span>
                     <span class="badge bg-secondary text-dark">Plastic Recycled</span>
                   </li>
                   <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span class="me-2 h4">23,456 kg</span>
-                    <span class="badge bg-secondary text-dark">Glass Recycled</span>
+                    <span class="me-2 h5">23,456 kg</span>
+                    <span class="badge badge-soft-glass h5">Glass Recycled</span>
                   </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <span class="me-2 h4">12,345 kg</span>
-                    <span class="badge bg-secondary text-dark">Paper Recycled</span>
+                  <li class="list-group-item d-flex justify-content-between align-items-center mb-3">
+                    <span class="me-2 h5">12,345 kg</span>
+                    <span class="badge badge-soft-paper h5">Paper Recycled</span>
                   </li>
                 </ul>
+
+<!--                <div class="view-more-tab justify-content-center" >View More</div>-->
               </div>
+
+
             </div>
 
             <!-- Reward Points Card -->
@@ -86,6 +88,10 @@
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="me-2 h4">1500</span>
+
+                        <div *ngIf="earnedRewardPoints !== null" class="mb-3">
+                          <span class="mt-1 h3" style="color: #28a745"> + {{ earnedRewardPoints }} </span>
+                        </div>
 <!--                        <span class="badge bg-warning text-dark">LEVEL 3</span>-->
                       </li>
                     </ul>
@@ -108,8 +114,8 @@
                     <h5 class="card-title mb-0">My Sustainability Index for May</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Your contribution to a greener planet</h6>
                   </div>
-                  <div>
-                    <i class="bi bi-tree h2 text-success"></i>
+                  <div class="h3">
+                    <i style="color: #28a745" class="fa-brands fa-envira"></i>
                   </div>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
@@ -117,7 +123,9 @@
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span class="me-2 h4">+123%</span>
-                        <span class="badge bg-success">EXCELLENT</span>
+                        <div *ngIf="earnedRewardPoints !== null" class="mb-3">
+                          <span class="mt-1 h3" style="color: #28a745"> + {{ earnedSustainabilityIndex }} </span>
+                        </div>
                       </li>
                     </ul>
                   </div>
@@ -189,12 +197,12 @@
                   </div>
 
 
-                  <div class="row mb-3">
-                    <label class="col-sm-3 col-form-label">Image URL</label>
-                    <div class="col-sm-9">
-                      <input type="text" [ngModel]="state?.appData?.data?.center?.imageUrl" name="imageUrl" [disabled]="state?.appData?.data?.user.roleName === 'ROLE_USER' || (isLoading$ | async)" class="form-control">
-                    </div>
-                  </div>
+<!--                  <div class="row mb-3">-->
+<!--                    <label class="col-sm-3 col-form-label">Image URL</label>-->
+<!--                    <div class="col-sm-9">-->
+<!--                      <input type="text" [ngModel]="state?.appData?.data?.center?.imageUrl" name="imageUrl" [disabled]="state?.appData?.data?.user.roleName === 'ROLE_USER' || (isLoading$ | async)" class="form-control">-->
+<!--                    </div>-->
+<!--                  </div>-->
 
                   <button [disabled]="state?.appData?.data?.user.roleName === 'ROLE_USER' || (isLoading$ | async)" type="submit" class="btn btn-primary float-end">
                     <span *ngIf="isLoading$ | async" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="margin-right: 5px;"></span>
@@ -209,7 +217,7 @@
               <div class="card-body">
                 <h5 class="card-title">New Recycling Activity</h5>
 
-                <form [formGroup]="recyclingForm" (ngSubmit)="onSubmit()">
+                <form [formGroup]="recyclingForm" (ngSubmit)="contribute()">
                   <div class="row">
                     <!-- Column 1: Recycled Material Type -->
                     <div class="col-md-4 mb-3">
@@ -235,9 +243,11 @@
                   </div>
 
                   <!-- Display Added Value -->
-                  <div *ngIf="addedValue !== null" class="mb-3">
+                  <div *ngIf="earnedRewardPoints !== null && earnedSustainabilityIndex != null" class="mb-3">
                     <div class="alert alert-success" role="alert">
-                      +{{ addedValue }} Reward Points and Sustainability Index for recycling {{ recyclingForm.value.amount }} of
+                      + {{ earnedRewardPoints }} Reward Points for recycling
+                      <br>
+                      + {{ earnedSustainabilityIndex }} Sustainability Impact earned
                     </div>
                   </div>
 
@@ -262,8 +272,8 @@
               <div class="card-body">
                 <h5 class="card-title">My Activities At {{ state?.appData?.data?.center?.name }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted"></h6>
-                <table class="table table-hover">
-                  <thead class="table-dark">
+                <table class="table">
+                  <thead style="color: white; background-color: #A01540" class="table-responsive">
                   <tr>
                     <th scope="col">Activity ID</th>
                     <th scope="col"> Recycled Material</th>
