--- a/src/app/component/center-details/center-details.component.html
+++ b/src/app/component/center-details/center-details.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngSwitchCase="DataState.LOADED">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
     <section>
-      <div class="container">
+      <div class="container center-details">
         <nav aria-label="breadcrumb" style="margin-top: 20px;">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a></li>
@@ -87,7 +87,7 @@
                   <div>
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <span class="me-2 h4">1500</span>
+                        <span class="me-2 h4">{{ state?.appData?.data?.rewardPoints }}</span>
 
                         <div *ngIf="earnedRewardPoints !== null" class="mb-3">
                           <span class="mt-1 h3" style="color: #28a745"> + {{ earnedRewardPoints }} </span>
@@ -280,7 +280,7 @@
                     <th scope="col">Amount</th>
                     <th scope="col">Status</th>
                     <th scope="col">Date</th>
-                    <!--                    <th scope="col">Action</th>-->
+<!--                                        <th scope="col">Action</th>-->
                   </tr>
                   </thead>
                   <tbody>
