--- a/src/app/component/center-all/center-all.component.html
+++ b/src/app/component/center-all/center-all.component.html
@@ -17,7 +17,7 @@
             <h4 class="fw-bold">Available Recycling Centers ({{state?.appData?.data?.page?.totalElements}})</h4>
 
             <div class="d-flex justify-content-end align-items-center mt-3">
-              <button class="btn btn-danger me-2" (click)="redirectNewCenter()">
+              <button class="btn btn-danger me-2" (click)="redirectNewCenter()" style="margin-left: 12px">
                 <i class="bi bi-file-earmark-excel"></i> Export Report
               </button>
               <button class="btn btn-success me-2" (click)="redirectNewCenter()">
@@ -94,19 +94,18 @@
                     </select>
                   </div>
 
-                  <div class="col-md-4">
-                    <button type="button" class="btn btn-secondary mb-3" (click)="resetFilters()">Reset Filters</button>
+                  <div class="col-md-4 d-flex align-items-end">
+                    <button type="button" class="btn btn-secondary mb-3 me-2" (click)="resetFilters()">Reset Filters</button>
                   </div>
-
                 </div>
 
                 <!-- Selected Materials Badges -->
-                <div class="selected-materials">
-                  <div *ngFor="let material of selectedMaterials" class="badge bg-success">
-                    {{ material }}
-                    <button type="button" class="btn-close" aria-label="Remove" (click)="onRemoveMaterial(material)"></button>
-                  </div>
-                </div>
+<!--                <div class="selected-materials">-->
+<!--                  <div *ngFor="let material of selectedMaterials" class="badge bg-success">-->
+<!--                    {{ material }}-->
+<!--                    <button type="button" class="btn-close" aria-label="Remove" (click)="onRemoveMaterial(material)"></button>-->
+<!--                  </div>-->
+<!--                </div>-->
               </form>
             </div>
           </div>
@@ -115,18 +114,18 @@
         <!-- Table and Pagination Content -->
         <!-- Table Section -->
         <div class="table-responsive mt-3">
-          <table class="table table-hover">
+          <table matSort (matSortChange)="sort($event)" class="table table-hover">
             <!-- Table Header -->
             <thead class="bg-gradient text-white">
             <tr>
               <th scope="col" >Photo</th>
-              <th scope="col" (click)="sort('name')" class="sortable" [class.filtered]="isFiltered('name')" [class.sorted-asc]="isSorted('name', 'asc')" [class.sorted-desc]="isSorted('name', 'desc')" >Name</th>
+              <th scope="col"  mat-sort-header="name">Name</th>
               <th scope="col" >Contact</th>
-              <th scope="col" (click)="sort('county')" class="sortable" [class.filtered]="isFiltered('county')" [class.sorted-asc]="isSorted('county', 'asc')" [class.sorted-desc]="isSorted('county', 'desc')">County</th>
-              <th scope="col" (click)="sort('city')" class="sortable" [class.filtered]="isFiltered('city')" [class.sorted-asc]="isSorted('city', 'asc')" [class.sorted-desc]="isSorted('city', 'desc')">City</th>
-              <th scope="col" (click)="sort('materials')" class="sortable" [class.filtered]="isFiltered('materials')" [class.sorted-asc]="isSorted('materials', 'asc')" [class.sorted-desc]="isSorted('materials', 'desc')">Accepted Materials</th>
-              <th scope="col" (click)="sort('openingHour')">Working Intervals</th>
-<!--              <th scope="col">Status</th>-->
+              <th scope="col"  mat-sort-header="county" class="sortable" [class.filtered]="isFiltered('county')" >County</th>
+              <th scope="col"  mat-sort-header="city" class="sortable" [class.filtered]="isFiltered('city')">City</th>
+              <th scope="col"  mat-sort-header="materials" class="sortable" [class.filtered]="isFiltered('materials')">Accepted Materials</th>
+              <th scope="col" >Working Intervals</th>
+              <!--              <th scope="col">Status</th>-->
               <th scope="col">Action</th>
             </tr>
             </thead>
